Started fullscreen and audio source buttons

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
         <button id="play-button" 
             onclick="togglePlayPause()">
             Play/Pause</button> 
-        <button id="vol-button" 
+        <button id="vol-button" innerHTML="Mute"
             onclick="toggleMute()">
             Mute</button> 
+        <button id="audio-source"  
+            onclick="displayAudioSources()">
+            Audio Sources</button>
+        <button id="fullscreen-button"
+            onclick="toggleFullscreen()">
+            Fullscreen</button>
     </div>
     <br>
 
