--- a/index.html
+++ b/index.html
@@ -8,27 +8,33 @@
 
 <body> 
 <div style="text-align:center">
-    <div id="player-controls">
-        <button id="play-button" 
-            onclick="togglePlayPause()">
-            Play/Pause</button> 
-        <button id="vol-button" innerHTML="Mute"
-            onclick="toggleMute()">
-            Mute</button> 
-        <button id="audio-source"  
-            onclick="displayAudioSources()">
-            Audio Sources</button>
-        <button id="fullscreen-button"
-            onclick="toggleFullscreen()">
-            Fullscreen</button>
-    </div>
-    <br>
 
     <video id="player-video" width="420" preload controls>
         <source src="test.mp4" type="video/mp4" autoplay>
         Your browser does not support HTML5 video.
     </video>
-</div> 
+    <br>
+
+    <div id="player-controls">
+        <button id="play-button" title="Play"
+            onclick="togglePlayPause()">
+            <img id="play-button-img" src="Graphics/play.png" width=20 />
+        </button> 
+        <button id="vol-button" title="Mute"
+            onclick="toggleMute()">
+            <img id="vol-button-img" src="Graphics/vol.png" width=20 />
+        </button> 
+        <button id="audio-source" title="Audio Source"  
+            onclick="displayAudioSources()">
+            <img id="audio-button-img" src="Graphics/audiosrc.png" width=20 />
+        </button>
+        <button id="fullscreen-button" title="Fullscreen"
+            onclick="toggleFullscreen()">
+            <img id="fullscreen-button-img" src="Graphics/fs.png" width=20 />
+        </button>
+    </div>
+
+</div>
 </body>
 
 <script src="web-player.js"></script>
