--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html> 
-<html> 
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8"/>
     <title>A Better Web Player</title>
     <link href="stylesheet.css" rel="stylesheet">
 </head>
 
-<body> 
+<body>
 <div style="text-align:center">
 
     <video id="player-video" width="420" preload controls>
@@ -24,9 +24,9 @@
             onclick="toggleMute()">
             <img id="vol-button-img" src="Graphics/vol.png" width=20 />
         </button> 
-        <button id="audio-source" title="Audio Source"  
+        <button id="audio-source-button" title="Audio Source"
             onclick="displayAudioSources()">
-            <img id="audio-button-img" src="Graphics/audiosrc.png" width=20 />
+            <img id="audio-src-img" src="Graphics/audiosrc.png" width=20 />
         </button>
         <button id="fullscreen-button" title="Fullscreen"
             onclick="toggleFullscreen()">
@@ -39,4 +39,3 @@
 
 <script src="web-player.js"></script>
 </html>
-
