--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div style="text-align:center">
+<div class="player-holder">
 
     <video id="player-video" width="420" preload controls>
         <source src="test.mp4" type="video/mp4" autoplay>
@@ -15,7 +15,7 @@
     </video>
     <br>
 
-    <div id="player-controls">
+    <div class="player-controls">
         <button id="play-button" title="Play"
             onclick="togglePlayPause()">
             <img id="play-button-img" src="Graphics/play.png" width=20 />
