--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div class="player-holder" 
+<div class="player-holder"
     onmouseover="videoHoverIn()"
     onmouseout="videoHoverOut()">
 
@@ -15,8 +15,15 @@
         <source src="test.mp4" type="video/mp4" autoplay>
         Your browser does not support HTML5 video.
     </video>
-    <audio id="player-audio">
-        <source src="test.mp3" type="audio/mpeg">
+
+    <audio id="player-audio-game">
+        <source src="test1.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="player-audio-mus">
+        <source src="test2.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="player-audio-com">
+        <source src="test3.mp3" type="audio/mpeg">
     </audio>
 
     <br>
@@ -25,52 +32,56 @@
         <button id="play-button" title="Play"
             onclick="togglePlayPause()">
             <img id="play-button-img" src="Graphics/play.png" width=20 />
-        </button> 
-        <button id="vol-button" title="Mute"
-            onclick="toggleMute()"
-            onmouseover="volSliderIn()"
-            onmouseout="volSliderOut()">
+        </button>
+        <button id="vol-button" title="Master Volume"
+            onclick="toggleMute()">
             <img id="vol-button-img" src="Graphics/vol.png" width=20 />
         </button>
-        <input type="range" id="volume-slider" min="0" max="100" step="1" 
+        <input type="range" id="volume-slider" min="0" max="100" step="1"
             value="100"
             oninput="changeVol()">
-        <button class="dropdown" id="audio-source-button" title="Audio Source"
+
+        <button class="dropdown" id="audio-source-button" title="Audio Sources"
             onclick="displayAudioSources()">
             <img id="audio-src-img" src="Graphics/audiosrc.png" width=20 />
         </button>
+
         <div class="dropdown-content">
             <div>
             <button id="audio-source-bgm" title="BGM Audio"
                 onclick="toggleAudio()">
-                <img src="Graphics/bgm.png" width=20 />
+                <img src="Graphics/controller.png" width=20 />
             </button>
-            <input type="range" id="audio-slider" min="0" max="100" step="1" 
+            <input type="range" id="audio-slider" min="0" max="100" step="1"
                 value="100"
                 oninput="changeAudVol()">
             </div>
+
             <div>
             <button id="audio-source-mus" title="Music"
                 onclick="toggleAudio()">
-                <img src="Graphics/mus.png" width=20 />
+                <img src="Graphics/audiosrc.png" width=20 />
             </button>
-            <input type="range" id="audio-slider" min="0" max="100" step="1" 
+            <input type="range" id="audio-slider" min="0" max="100" step="1"
                 value="100"
-                oninput="changeAudVol()">
+                oninput="changeAudVol(vol)">
             </div>
+
             <div>
             <button id="audio-source-com" title="Commentary"
                 onclick="toggleAudio()">
                 <img src="Graphics/mic.png" width=20 />
             </button>
-            <input type="range" id="audio-slider" min="0" max="100" step="1" 
+            <input type="range" id="audio-slider" min="0" max="100" step="1"
                 value="100"
                 oninput="changeAudVol()">
             </div>
         </div>
-        <input type="range" id="audio-slider" min="0" max="100" step="1" 
+
+        <input type="range" id="audio-slider" min="0" max="100" step="1"
             value="100"
             oninput="changeAudVol()">
+
         <button id="fullscreen-button" title="Fullscreen"
             onclick="toggleFullscreen()">
             <img id="fullscreen-button-img" src="Graphics/fs.png" width=20 />
