--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     onmouseout="videoHoverOut()">
 
     <video id="player-video" width="100%" preload controls>
-        <source src="test.mp4" type="video/mp4" autoplay>
+        <source src="rtmp://abwp/myapp/mystream" type="video/mp4" autoplay>
         Your browser does not support HTML5 video.
     </video>
 
